Zidan's shit fixed

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@ function searchClick() {
                     <div class="row">
 
                         <div class="col-12 text-center">
-                            <h2 class="text-white mb-4">Как это работает?</h1>
+                            <h2 class="text-white mb-4">Кое-что о алгоритмах</h1>
                         </div>
 
                         <div class="col-lg-10 col-12 mx-auto">
@@ -183,7 +183,7 @@ function searchClick() {
                 </div>
             </section>
 
-            <section class="faq-section section-padding" id="section_4">
+            @*<section class="faq-section section-padding" id="section_4">
                 <div class="container">
                     <div class="row">
 
@@ -280,5 +280,5 @@ function searchClick() {
 
                     </div>
                 </div>
-            </section>
+            </section>*@
            
