--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,9 +13,9 @@ function searchClick() {
                     <div class="row">
 
                         <div class="col-lg-8 col-12 mx-auto">
-                            <h1 class="text-white text-center">Алгоритмы Программирования</h1>
+                            <h1 class="text-white text-center">Алгоритмҳои барномасозӣ</h1>
 
-                            <h6 class="text-center">платформа для изучения алгоритмов</h6>
+                            <h6 class="text-center">платформа барои омӯзиши алгоритмҳо</h6>
 
                             @*<form @*action="@Url.Action("Search", "Topics", null)" method="get" class="custom-form mt-4 pt-2 mb-lg-0 mb-5" role="search">*@
                             <div class="custom-form mt-4 pt-2 mb-lg-0 mb-5">
@@ -24,9 +24,9 @@ function searchClick() {
 
                                     </span>
 
-                                    <input id="search" name="keyword" type="search" class="form-control" placeholder="Design, Code, Marketing, Finance ..." aria-label="Search">
+                                    <input id="search" name="keyword" type="search" class="form-control" placeholder="Номи алгортм" aria-label="Search">
 
-                                    <button onclick="searchClick()" type="button" class="searchBtn">Искать</button>
+                                    <button onclick="searchClick()" type="button" class="searchBtn">ҷустуҷӯ</button>
                                 </div>
                             </div>
 
