--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Security.Claims
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 <!doctype html>
 <html lang="ru">
     <head>
@@ -59,7 +60,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">ТАМОС</a>
+                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Тамос</a>
                             </li>
                             @if (@HttpContextAccessor.HttpContext?.User.FindFirst(ClaimTypes.NameIdentifier) != null)
                             {
@@ -88,9 +89,9 @@
 
                         </ul>
 
-                        <div class="d-none d-lg-block">
-                            <a href="#top" class="navbar-icon bi-person smoothscroll"></a>
-                        </div>
+                        @*<div class="d-none d-lg-block">
+                            <a href="@Url.Action("Profile", "Users")" class="navbar-icon bi-person smoothscroll"></a>
+                        </div>*@
                     </div>
                 </div>
             </nav>
@@ -107,9 +108,9 @@
                 <div class="row">
 
                     <div class="col-lg-3 col-12 mb-4 pb-2">
-                        <a class="navbar-brand mb-2" href="index.html">
+                        <a class="navbar-brand mb-2" href="@Url.Action("Index", "Home")">
                             <i class="bi-back"></i>
-                            <span>Topic</span>
+                            <span>Algorithms</span>
                         </a>
                     </div>
 
@@ -118,19 +119,15 @@
 
                         <ul class="site-footer-links">
                             <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Home</a>
+                                <a href="@Url.Action("Index", "Home")" class="site-footer-link">Home</a>
                             </li>
 
                             <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">How it works</a>
+                                <a href="@Url.Action("Index", "Topics")" class="site-footer-link">Алгоритмҳо</a>
                             </li>
 
                             <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">FAQs</a>
-                            </li>
-
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Contact</a>
+                                <a href="@Url.Action("InDevelopment", "Home")" class="site-footer-link">Тамос</a>
                             </li>
                         </ul>
                     </div>
@@ -139,18 +136,17 @@
                         <h6 class="site-footer-title mb-3">Information</h6>
 
                         <p class="text-white d-flex mb-1">
-                            <a href="tel: 305-240-9671" class="site-footer-link">
-                                305-240-9671
+                            <a href="tel: 98-500-7557" class="site-footer-link">
+                                98-500-7557
                             </a>
                         </p>
 
                         <p class="text-white d-flex">
-                            <a href="mailto:info@company.com" class="site-footer-link">
-                                info@company.com
+                            <a href="mailto:algorithmsproject69@gmail.com" class="site-footer-link">
+                                algorithmsproject69@gmail.com
                             </a>
                         </p>
                     </div>
-                         @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
                     <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
                         <div class="dropdown">
