--- a/Views/Comments/Create.cshtml
+++ b/Views/Comments/Create.cshtml
@@ -7,7 +7,7 @@
                             <div>
                                 <h5 class="mb-2">@Model.UserName</h5>
 
-                                <p class="mb-0" style="color: #fff">@Model.Text</p>
+                                <p class="mb-0">@Model.Text</p>
                             </div>
                         </div>
                     </div>
