--- a/Views/Home/InDevelopment.cshtml
+++ b/Views/Home/InDevelopment.cshtml
@@ -1,6 +1,25 @@
 ﻿@{
     Layout = "/Views/Shared/_Layout.cshtml";
 }
+<header class="site-header d-flex flex-column justify-content-center align-items-center">
+    <div class="container">
+        <div class="row justify-content-center align-items-center">
+
+            <div class="col-lg-11 col-12 mb-5">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")">Асосӣ</a></li>
+
+                        <li class="breadcrumb-item active" aria-current="page">Дар таҳия</li>
+                    </ol>
+                </nav>
+
+                <h2 class="text-white">Дар таҳия</h2>
+            </div>
+
+        </div>
+    </div>
+</header>
 
 <section class="section-padding">
     <div class="container">
@@ -8,7 +27,7 @@
 
             <div class="col-lg-8 col-12 mt-3 mx-auto">
 
-                <h3 class="mb-4">Эта страница в процессе разработки</h3>
+                <h3 class="mb-4">Ин саҳифа дар ҳоли сохтмон аст</h3>
 
             </div>
         </div>
