--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@ function searchClick() {
 
                                     </span>
 
-                                    <input id="search" name="keyword" type="search" class="form-control" placeholder="Номи алгортм" aria-label="Search">
+                                    <input id="search" name="keyword" type="search" class="form-control" placeholder="Номи алгоритм..." aria-label="Search">
 
                                     <button onclick="searchClick()" type="button" class="searchBtn">ҷустуҷӯ</button>
                                 </div>
