--- a/Views/Users/Profile.cshtml
+++ b/Views/Users/Profile.cshtml
@@ -12,13 +12,13 @@
             <div class="col-lg-5 col-12">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")">Главная</a></li>
+                        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")">Асосӣ</a></li>
 
-                        <li class="breadcrumb-item active" aria-current="page">Профиль</li>
+                        <li class="breadcrumb-item active" aria-current="page">Профил</li>
                     </ol>
                 </nav>
 
-                <h2 class="text-white">Профиль</h2>
+                <h2 class="text-white">Профил</h2>
             </div>
 
         </div>
@@ -44,7 +44,7 @@
             </div>
 
             <div class="col-lg-8 col-12 m-auto">
-                <a href="@Url.Action("SignOutt", "Users")" class="btn custom-btn mt-3 mt-lg-4">Выйти</a>
+                <a href="@Url.Action("SignOutt", "Users")" class="btn custom-btn mt-3 mt-lg-4">Баромадан</a>
             </div>
 
             <!-- 
