--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-lg-5 me-lg-auto">
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="@Url.Action("Index", "Home")">АСОСӢ</a>
+                                <a class="nav-link click-scroll" href="@Url.Action("Index", "Home")">Асосӣ</a>
                             </li>
 
                             <li class="nav-item">
@@ -56,7 +56,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Задачи</a>
+                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Машқҳо</a>
                             </li>
 
                             <li class="nav-item">
@@ -65,7 +65,7 @@
                             @if (@HttpContextAccessor.HttpContext?.User.FindFirst(ClaimTypes.NameIdentifier) != null)
                             {
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("Profile", "Users")">Профиль</a>
+                                <a class="nav-link" href="@Url.Action("Profile", "Users")">Профил</a>
                             </li>
                                 @if (@HttpContextAccessor.HttpContext?.User.IsInRole("True") ?? false)
                                 {
@@ -80,9 +80,9 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">аутентификатсия</a>
 
                                 <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
-                                    <li><a class="dropdown-item" href="@Url.Action("Login", "Auth")">ВОРИДШАВӢ</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Login", "Auth")">Воридшавӣ</a></li>
 
-                                    <li><a class="dropdown-item" href="@Url.Action("Register", "Auth")">БАҚАЙДГИРӢ</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Register", "Auth")">Бақайдгирӣ</a></li>
                                 </ul>
                             </li>
                             }
@@ -149,7 +149,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
-                        <div class="dropdown">
+                        <!-- <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             English</button>
 
@@ -166,7 +166,7 @@
 
                                 <li><button class="dropdown-item" type="button">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Role).Value</button></li>*@
                             </ul>
-                        </div>
+                        </div>-->
 
                         <p class="copyright-text mt-lg-5 mt-4">Copyright © 2024 Algorithms. All rights reserved.
                         <br><br>Design made by Shakhzod</p>
