tajikification of Home page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@ function searchClick() {
                     <div class="row">
 
                         <div class="col-12 text-center">
-                            <h2 class="text-white mb-4">Кое-что о алгоритмах</h1>
+                            <h2 class="text-white mb-4">Чизе дар бораи алгоритмҳо</h2>
                         </div>
 
                         <div class="col-lg-10 col-12 mx-auto">
@@ -55,9 +55,9 @@ function searchClick() {
                                     </div>
 
                                     <li>
-                                        <h4 class="text-white mb-3">Погрузитесь в мир алгоритмов.</h4>
+                                        <h4 class="text-white mb-3">Ба ҷаҳони алгоритмҳо ғарқ шавед.</h4>
 
-                                        <p class="text-white"> узнайте о различных типах, их назначении и применении. От сортировки до поиска путей, наши материалы помогут вам понять основы и продвинутые концепции.</p>
+                                        <p class="text-white">Дар бораи намудҳои гуногун, таъинот ва истифодаи онҳо маълумот гиред. Аз ҷобаҷогузорӣ то дарефти роҳҳо, маводҳои мо ба шумо дар фаҳмидани асосҳо ва мафҳумҳои пешрафта кӯмак мерасонанд.</p>
 
                                         <div class="icon-holder">
                                             <i class="bi-search"></i>
@@ -65,9 +65,9 @@ function searchClick() {
                                     </li>
 
                                     <li>
-                                        <h4 class="text-white mb-3">Закладка алгоритмов</h4>
+                                        <h4 class="text-white mb-3">Хатчӯби Алгоритмҳо</h4>
 
-                                        <p class="text-white">Это позволит вам легко возвращаться к изученному материалу и применять его на практике.</p>
+                                        <p class="text-white">Ин ба шумо имкон медиҳад, ки ба маводи омӯхтаатон ба осонӣ баргардед ва онро дар амал татбиқ кунед.</p>
 
                                         <div class="icon-holder">
                                             <i class="bi-bookmark"></i>
@@ -75,9 +75,9 @@ function searchClick() {
                                     </li>
 
                                     <li>
-                                        <h4 class="text-white mb-3">Практикуйтесь на реальных задачах</h4>
+                                        <h4 class="text-white mb-3">Дар вазифаҳои воқеӣ машқ кунед</h4>
 
-                                        <p class="text-white">Решайте проблемы, улучшайте свои навыки и становитесь экспертом в области алгоритмов и структур данных.</p>
+                                        <p class="text-white">Мушкилотро ҳал кунед, малакаҳои худро такмил диҳед ва мутахассиси алгоритмҳо ва сохторҳои маълумот шавед.</p>
 
                                         <div class="icon-holder">
                                             <i class="bi-archive"></i>
@@ -88,7 +88,10 @@ function searchClick() {
                             </div>
                         </div>
                     </div>
-                    <h4 class="text-white text-center">Ниже можете почитать объясненые некоторых важных терминов</h4>
+
+                    <br/>
+
+                    <h4 class="text-white text-center">Дар зер шумо метавонед шарҳи баъзе истилоҳҳои муҳимро хонед</h4>
                 </div>
             </section>
 
@@ -97,31 +100,31 @@ function searchClick() {
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-12 m-auto">
-                            <h2 class ="text-left">О большое</h2>
+                            <h2 class ="text-left">О-и калон</h2>
 
                             <p class="text-center">
 
                             <div class="">
-                                "О большое" (или "Big O") -- это нотация, используемая в информатике и математике для описания асимптотической сложности алгоритмов. Она показывает, как время выполнения алгоритма или его использование памяти растет в зависимости от размера входных данных.
+                                <p>"О-и калон" (Е "Big O") -- ин нотатсияест, ки дар информатика ва математика барои тавсифи мураккабии асимптотикии алгоритмҳо истифода мешавад. Он нишон медиҳад, ки чӣ гуна вақти иҷрои алгоритм ё истифодаи хотираи он вобаста ба андозаи маълумоти воридшуда меафзояд.</p>
                             </div>
                             
                             <br/>
 
                             <div class="">
-                                Основная идея Big O — описать худший сценарий поведения алгоритма. Например, если алгоритм имеет сложность O(n), это значит, что время выполнения алгоритма увеличивается линейно с увеличением размера входных данных. Нотация O(n^2) означает квадратичную зависимость, то есть время выполнения увеличивается пропорционально квадрату размера входных данных.
+                                <p>Ақидаи асосии Big O тасвири бадтарин сенарияи рафтори алгоритм аст. Масалан, агар алгоритм мураккабии O(n) дошта бошад, ин маънои онро дорад, ки вақти иҷрои алгоритм бо афзоиши андозаи маълумоти воридшуда ба таври хаттӣ зиед мешавад. Нотатсияи O (n^2) маънои вобастагии квадратиро дорад, яъне вақти иҷро мутаносибан ба квадрати андозаи маълумоти воридшуда зиед мешавад.</p>
                             </div>
 
                             <br/>
 
-                            <h4 class="">Примеры часто встречающихся обозначений:</h4>
+                            <h4 class="">Намунаҳои аломатҳои маъмулан истифодашаванда:</h4>
                             <ul>
-                                <li class="">O(1): Константная сложность, время выполнения не зависит от размера входных данных.</li>
-                                <li class="">O(log n): Логарифмическая сложность, часто встречается в алгоритмах поиска.</li>
-                                <li class="">O(n log n): Линейно-логарифмическая сложность, характерна для эффективных алгоритмов сортировки, таких как сортировка слиянием.</li>
-                                <li class="">O(n^2): Квадратичная сложность, встречается в менее эффективных алгоритмах сортировки, например, в сортировке вставками.</li>
+                                <li class="">O (1): мураккабии Доимӣ, вақти иҷро аз андозаи маълумоти воридшуда вобаста нест;</li>
+                                <li class="">O (log n): мураккабии Логарифмӣ, аксар вақт дар алгоритмҳои ҷустуҷӯ пайдо мешавад;</li>
+                                <li class="">O (n log n): мураккабии Хаттӣ-логарифмӣ, ки барои алгоритмҳои самараноки ҷудокунӣ, ба монанди ҷудокунии якҷояшавӣ хос аст;</li>
+                                <li class="">O (n ^ 2): мураккабии Квадратӣ, дар алгоритмҳои камтар самараноки навъбандӣ, масалан, дар навъбандии иловаҳо пайдо мешавад.</li>
                             </ul>
 
-                            <div class="">Использование Big O позволяет сравнивать и выбирать наиболее эффективные алгоритмы для решения конкретных задач, особенно когда дело касается обработки больших объемов данных.</div>
+                            <div class=""><p>Истифодаи Big O ба шумо имкон медиҳад, ки алгоритмҳои самарабахшро барои ҳалли масъалаҳои мушаххас муқоиса кунед ва интихоб кунед, хусусан вақте ки сухан дар бораи коркарди миқдори зиеди маълумот меравад.</p></div>
                             </p>
                         </div>
                     </div>
@@ -131,52 +134,47 @@ function searchClick() {
 
                     <div class="row">
                         <div class="col-lg-8 col-12 mx-auto">
-                            <h2 class="text-left">Блок схемы</h2>
+                            <h2 class="text-left">Блок-схемаҳо</h2>
 
                             <p class="text-center">
 
                                 <div class="">
-                                    Блок-схемы — это графическое представление алгоритмов или процессов, используемое для упрощения понимания и анализа последовательности действий. Они широко применяются в программировании, инженерии, управлении проектами и других областях для визуализации работы систем.
+                                    <p>Блок-схемаҳо ин намоиши графикии алгоритмҳо ё равандҳо мебошад, ки барои осон кардани фаҳмидан ва таҳлили пайдарпаии амалҳо истифода мешавад. Онҳо дар барномасозӣ, муҳандисӣ, идоракунии лоиҳа ва дигар соҳаҳо барои визуализатсияи кори системаҳо васеъ истифода мешаванд.</p>
                                 </div>
 
                                 <br />
 
                                 <br />
 
-                                <h4 class="">Основные элементы блок-схем:</h4>
+                                <h4 class="">Унсурҳои асосии блок-схемаҳо:</h4>
 
                                 <ul>
-                                    <li class="">Овал (терминатор): Начало и конец процесса.</li>
-                                    <li class="">Прямоугольник (процесс): Описание операции или действия, выполняемого в процессе.</li>
-                                    <li class="">Ромб (решение): Точка принятия решения с несколькими исходами, обычно "да" или "нет".</li>
-                                    <li class="">Параллелограмм (ввод/вывод): Операции ввода данных в процесс или вывода данных из него.</li>
-                                    <li class="">Стрелки (поток): Указывают направление потока процесса от одного элемента к другому.</li>
+                                    <li class="">Байзавӣ (терминатор): Оғоз ва анҷоми раванд;</li>
+                                    <li class="">Росткунҷа (раванд): Тавсифи амалиет е амали дар раванд иҷрошаванда;</li>
+                                    <li class="">Ромб (қарор): нуқтаи қабули қарор бо натиҷаҳои гуногун, одатан "ҳа" е "не";</li>
+                                    <li class="">Параллелограмм (вуруд / баромад): Амалиети ворид кардани маълумот ба раванд е баровардани маълумот аз он;</li>
+                                    <li class="">Тирҳо (ҷараен): самти ҷараени равандро аз як унсур ба унсури дигар нишон медиҳанд.</li>
                                 </ul>
 
-                                <h4 class="">Пример простой блок-схемы для алгоритма нахождения максимального числа из двух:</h4>
+                                <h4 class="">Афзалиятҳои истифодаи блок-схемҳо:</h4>
 
                                 <ul>
-                                    <li class="">Начало (Овал).</li>
-                                    <li class="">Ввод двух чисел (Параллелограмм)</li>
-                                    <li class="">Сравнение чисел (Ромб).</li>
-                                    <li class="">Конец (Овал)</li>
+                                    <li class="">Осонии дарк: тасвири Графикӣ фаҳмиши равандҳои мураккабро осон мекунад;</li>
+                                    <li class="">Равшанӣ: диаграммаҳои Ҷараен барои муайян кардани хатогиҳои мантиқӣ ва қадамҳои зиедатӣ дар алгоритм кӯмак мекунанд;</li>
+                                    <li class="">Универсалӣ: Барои соҳаҳо Ва намудҳои гуногуни равандҳо мувофиқанд.</li>
                                 </ul>
 
-                                <h4 class="text-white">Преимущества использования блок-схем:</h4>
+                                <h4 class="">Намунаи блок-схема дар амал</h4>
 
-                                <ul>
-                                    <li class="">Простота восприятия: Графическое представление упрощает понимание сложных процессов.</li>
-                                    <li class="">Ясность: Блок-схемы помогают выявлять логические ошибки и излишние шаги в алгоритме.</li>
-                                    <li class="">Универсальность: Подходят для различных областей и типов процессов.</li>
-                                    <li class="">Конец (Овал)</li>
-                                </ul>
-
-                                <h4 class="">Пример блок-схемы на практике:</h4>
                                 <div class="col-lg-5 col-12">
                                     <img src="~/images/block.jpg" class="img-fluid" alt="">
                                 </div>
 
-                                <div class="">В современных инструментах для создания блок-схем используются программные средства, такие как Microsoft Visio, Lucidchart и другие, что облегчает процесс построения и редактирования диаграмм.</div>
+                                <br/>
+
+                                <div class="">
+                                    <p>Воситаҳои муосир барои сохтани диаграммаҳо аз нармафзор ба Монанди Microsoft Visio, Lucidchart ва ғайра истифода мебаранд, ки раванди сохтан ва таҳрири диаграммаҳоро осон мекунад.</p>
+                                </div>
                             </p>
                         </div>
                     </div>
